--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +8,13 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Page Title</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+    	<a href="/about">About</a>
+    	<a href="/blog">Blog</a>
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+
