--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,6 +5,7 @@ const pageTitle = "Blog";
 ---
 
 <Layout>
+    <title>{pageTitle}</title>
 	<div class="btn text-btn">Blog Page</div>
     <p class="text-center">This is the blog page of the site.</p>
     <p class="text-center">It will be updated throughout the tutorial.</p>
