--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro"
+import Footer from "../components/Footer.astro"
 ---
 
 <!doctype html>
@@ -9,11 +11,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 	</head>
-	<body>
-		<a href="/">Home</a>
-    	<a href="/about">About</a>
-    	<a href="/blog">Blog</a>
+	<body class="bg-brand-primary text-vibrant">
+		<Navigation />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
