uno: add transformer directives

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,6 +6,6 @@ import Social from "../components/Social.astro"
     <div class="text-center align-bottom">2025 © SEELE1306. All rights reserved.</div>
     <div class="flex justify-center gap-6 mt-4">
         <Social platform="GitHub" username="SEELE1306" />
-        <Social platform="Unsplash" username="@seele1306" />
+        <Social platform="Unsplash" username="seele1306" />
     </div>
 </footer>
