--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+
+const pageTitle = "Home";
 ---
 
 <Layout>
-	<Welcome />
+	<title>{pageTitle}</title>
+	<div class="btn text-btn">Under construction...</div>
 </Layout>
