--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro"
+import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 ---
 
@@ -12,7 +12,7 @@ import Footer from "../components/Footer.astro"
 		<meta name="generator" content={Astro.generator} />
 	</head>
 	<body class="bg-brand-primary text-vibrant">
-		<Navigation />
+		<Header />
 		<slot />
 		<Footer />
 	</body>
