Styles: create global stylesheet

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ import Social from "../components/Social.astro"
             <a class="font-bold hover:underline hover:text-normal" href="https://unocss.dev/">UnoCSS</a>.
         </div>
         <div>Part of this site is inspired by
-            <a href="https://antfu.me/" class="font-bold hover:underline hover:text-normal">Anthony Fu</a>
+            <a href="https://antfu.me/" class="font-bold hover:underline hover:text-normal">Anthony Fu</a> (the creator of UnoCSS).
         </div>
     </div>
 </footer>
