--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 ---
-<div class="flex gap-8 justify-center p-4">
-    <a class="hover:underline" href="/">Home</a>
-    <a class="hover:underline" href="/about">About</a>
-    <a class="hover:underline" href="/blog">Blog</a>
+<div class="nav-links">
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/blog">Blog</a>
 </div>
