--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Blog";
 ---
 
-<Layout>
+<BaseLayout>
     <title>{pageTitle}</title>
 	<div class="btn text-btn">Blog Page</div>
     <p class="text-center">This is the blog page of the site.</p>
@@ -13,4 +13,4 @@ const pageTitle = "Blog";
     <ul>
       <li><a href="/posts/post-1/">Post 1</a></li>
     </ul>
-</Layout>
+</BaseLayout>
