layout: update dynamic pageTitle

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,8 +13,7 @@ const identity = {
 const skills = ["useless1", "useless2", "useless3", "useless4"];
 ---
 
-<BaseLayout>
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
 	<div class="btn text-btn">About Page</div>
     <h1>Hello!</h1>
     <ul>
