--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-const pageTitle = "Home";
+const pageTitle = "Home Page";
 ---
 
-<BaseLayout>
-	<title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
 	<div class="btn text-btn">Under construction...</div>
 </BaseLayout>
