--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,16 +1,14 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-const pageTitle = "Blog";
+const pageTitle = "Blog Page";
 ---
 
-<BaseLayout>
-    <title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
 	<div class="btn text-btn">Blog Page</div>
-    <p class="text-center">This is the blog page of the site.</p>
-    <p class="text-center">It will be updated throughout the tutorial.</p>
-
-    <ul>
-      <li><a href="/posts/post-1/">Post 1</a></li>
-    </ul>
+  <p class="text-center">This is the blog page of the site.</p>
+  <p class="text-center">It will be updated throughout the tutorial.</p>
+  <ul>
+    <li><a href="/posts/post-1/">Post 1</a></li>
+  </ul>
 </BaseLayout>
