post: Update default layout for a post

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Social from "../components/Social.astro"
 
 ---
-<footer>
+<footer class="mb-8">
     <div class="flex mt-2 ml-4 mb-8">
         <div>Find me on
             <div class="flex gap-4 mt-4">
