--- a/src/pages/posts/[post].astro
+++ b/src/pages/posts/[post].astro
@@ -1,12 +1,12 @@
 ---
+import '../../styles/global.css';
 import BaseLayout from "../../layouts/BaseLayout.astro";
-
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
     <div class="m-4">
-        <h1 class="text-4xl font-serif font-bold text-accent mb-4">{frontmatter.title}</h1>
+        <h1>{frontmatter.title}</h1>
         <div>Written by {frontmatter.author}</div>
         <div>Posted on {frontmatter.pubDate.toString().slice(0,10)}</div>
     </div>
