--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 ---
-<div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+<div class="flex gap-4 position-static w-auto m-4">
+    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/">Home</a>
+    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/about">About</a>
+    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/blog">Blog</a>
 </div>
