feat: remove About page and merge into Home

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,16 +3,19 @@ import Social from "../components/Social.astro"
 
 ---
 <footer class="mb-8">
-    <div class="flex mt-2 ml-4 mb-8">
+    <div class="flex mt-2 ml-8 mb-8 gap-4">
         <div>Find me on
             <div class="flex gap-4 mt-4">
                 <Social platform="GitHub" username="SEELE1306" />
                 <Social platform="Unsplash" username="@seele1306" />
             </div>
+            <div class="flex gap-2 mt-4">
+                or reach me at: <a class="font-mono hover:underline text-normal" href="mailto:">contact@seele1306.com</a>
+            </div>
         </div>
     </div>
 
-    <div class="text-left text-muted ml-4">
+    <div class="text-left text-muted ml-8">
         <div>2025 © Aoi / SEELE1306.</div>
         <div> Made with 
             <a class="font-bold hover:underline hover:text-normal" href="https://astro.build/">Astro</a> 
