--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 ---
-<div class="flex gap-4 position-static w-auto m-4">
-    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/">Home</a>
-    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/about">About</a>
+<div class="flex gap-4 position-static w-auto my-8 mx-8 justify-right">
+    <a class="inline-block text-lg font-bold font-sans text-normal hover:underline" href="/">Home</a>
     <a class="inline-block text-lg font-sans text-normal hover:underline" href="/blog">Blog</a>
+    <a class="inline-block text-lg font-sans text-normal hover:underline" href="/photos">Photos</a>
 </div>
