--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,17 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "Blog Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
 	<div class="btn text-btn">Blog Page</div>
-  <p class="text-left ml-4">This is the blog page of the site.</p>
-  <p class="text-left ml-4">It will be updated throughout the tutorial.</p>
-  <ul class="ml-4">
-    <li><a class="inline-block text-lg font-sans text-normal hover:underline" href="/posts/post-1/">Post 1</a></li>
+  <p class="text-left ml-8">This is the blog page of the site.</p>
+  <p class="text-left ml-8">It will be updated throughout the tutorial.</p>
+  <ul class="ml-8">
+    {allPosts.map((post: any) => 
+      <BlogPost url={post.url} title={post.frontmatter.title} />
+    )}
   </ul>
 </BaseLayout>
