feat: display tags in each blog post

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,7 +8,7 @@ const pageTitle = "Tag Index";
     <div class="ml-8">
         {tags.map((tag) => (
             <p>
-                <a class="inline-block text-lg font-sans text-normal hover:underline" href={`/tags/${tag}`}>{tag}</a>
+                <a class="inline-block font-sans text-normal hover:underline" href={`/tags/${tag}`}>{tag}</a>
             </p>
         ))}
     </div>
