--- a/src/pages/posts/[post].astro
+++ b/src/pages/posts/[post].astro
@@ -12,6 +12,14 @@ const pageTitle = frontmatter.title;
         <div>Posted on {frontmatter.pubDate.toString().slice(0,10)}</div>
         <div><em>{frontmatter.description}</em></div>
         <img class="my-4" src={frontmatter.image.url} width="640" alt={frontmatter.image.alt} />
+        <div class="flex gap-4">
+            <div class="text-accent font-bold">Tags:</div>
+            {frontmatter.tags.map((tag: string) => (
+                <p>
+                    <a class="inline-block font-sans text-normal hover:underline" href={`/tags/${tag}`}>{tag}</a>
+                </p>
+            ))}
+        </div>
     </div>
     <div class="m-8 max-w-3xl">
         <slot />
