--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
+import { getCollection } from 'astro:content';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+const allPosts = await getCollection("blog");
 const pageTitle = "Blog Page";
 ---
 
@@ -11,7 +12,7 @@ const pageTitle = "Blog Page";
   <p class="text-left ml-8">It will be updated throughout the tutorial.</p>
   <ul class="ml-8">
     {allPosts.map((post: any) => 
-      <BlogPost url={post.url} title={post.frontmatter.title} />
+      <BlogPost url={`/posts/${post.id}`} title={post.data.title} />
     )}
   </ul>
 </BaseLayout>
