--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Social from "../components/Social.astro"
 
 ---
-<footer class="mb-8">
+<footer class="mb-8 @sm:max-w-50vw">
     <div class="flex mt-2 ml-8 mb-8 gap-4">
         <div>Find me on
             <div class="flex gap-4 mt-4">
