feat: Image optimization for content collection

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Social from "../components/Social.astro"
 
 ---
-<footer class="mb-8 @sm:max-w-50vw">
+<footer class="mb-8">
     <div class="flex mt-2 ml-8 mb-8 gap-4">
         <div>Find me on
             <div class="flex gap-4 mt-4">
@@ -18,12 +18,12 @@ import Social from "../components/Social.astro"
     <div class="text-left text-muted ml-8">
         <div>2025 © Aoi / SEELE1306.</div>
         <div> Made with 
-            <a class="font-bold hover:underline hover:text-normal" href="https://astro.build/">Astro</a> 
+            <a class="link" href="https://astro.build/">Astro</a> 
             and 
-            <a class="font-bold hover:underline hover:text-normal" href="https://unocss.dev/">UnoCSS</a>.
+            <a class="link" href="https://unocss.dev/">UnoCSS</a>.
         </div>
         <div>Part of this site is inspired by
-            <a href="https://antfu.me/" class="font-bold hover:underline hover:text-normal">Anthony Fu</a> (the creator of UnoCSS).
+            <a href="https://antfu.me/" class="link">Anthony Fu</a> (the creator of UnoCSS).
         </div>
     </div>
 </footer>
