--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,8 @@
 ---
 --- 
-<div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/blog">Blog</a>
-    <a href="/tags">Tags</a>
-    <a href="/photos">Photos</a>
+<div class="nav">
+    <a class="nav-link" href="/">Home</a>
+    <a class="nav-link" href="/blog">Blog</a>
+    <a class="nav-link" href="/tags">Tags</a>
+    <a class="nav-link" href="/photos">Photos</a>
 </div>
