--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,27 +1,32 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
-const { frontmatter } = Astro.props;
+import { Image } from "astro:assets";
+import { getCollection } from "astro:content";
+const allBlogPosts = await getCollection("blog");
 ---
-
-<BaseLayout pageTitle={frontmatter.title}>  
-    <div class="flex justify-center">
-        <div class="max-w-75vw sm:max-w-50vw">
-            <h1 class="post-title">{frontmatter.title}</h1>
-            <div>Written by {frontmatter.author}</div>
-            <div>Posted on {frontmatter.pubDate.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
-            <div>{frontmatter.description}</div>
-            <img class="my-4" src={frontmatter.image.url} width="640" alt={frontmatter.image.alt} />
-            <div class="flex gap-4">
-                <div class="text-accent font-bold">Tags:</div>
-                {frontmatter.tags.map((tag: string) => (
-                    <p>
-                        <a class="link" href={`/tags/${tag}`}>{tag}</a>
-                    </p>
-                ))}
+{
+    allBlogPosts.map((post) => (
+        <BaseLayout pageTitle={post.data.title}>  
+            <div class="flex justify-center">
+                <div class="max-w-75vw sm:max-w-50vw">
+                    <h1 class="post-title">{post.data.title}</h1>
+                    <div>Written by <b>{post.data.author}</b></div>
+                    <div>Posted on {post.data.pubDate.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
+                    <div class="mt-8"><em>{post.data.description}</em></div>
+                    <Image class="my-4" src={post.data.cover} alt={post.data.coverAlt} layout='constrained' width={640} />
+                    <div class="flex gap-4">
+                        <div class="text-accent font-bold">Tags:</div>
+                        {post.data.tags.map((tag: string) => (
+                            <p>
+                                <a class="link" href={`/tags/${tag}`}>{tag}</a>
+                            </p>
+                    ))}
+                    </div>
+                    <article class="post-default">
+                        <slot />
+                    </article>
+                </div>
             </div>
-            <article class="post-default">
-                <slot />
-            </article>
-        </div>
-    </div>
-</BaseLayout>
+        </BaseLayout>
+    ))
+}
