--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
+import { Image } from 'astro:assets';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import BlogPost from '../components/BlogPost.astro';
-const allPosts = await getCollection("blog");
+const allBlogPosts = await getCollection("blog");
 const pageTitle = "Blog Page";
 ---
 
@@ -10,9 +11,12 @@ const pageTitle = "Blog Page";
 	<div class="btn text-btn">Blog Page</div>
   <p class="text-left ml-8">This is the blog page of the site.</p>
   <p class="text-left ml-8">It will be updated throughout the tutorial.</p>
-  <ul class="ml-8">
-    {allPosts.map((post: any) => 
-      <BlogPost url={`/posts/${post.id}`} title={post.data.title} />
+  <ul class="m-8 flex gap-8">
+    {allBlogPosts.map((post: any) => 
+      <div>
+        <BlogPost url={`/posts/${post.id}`} title={post.data.title} />
+        <Image class="my-4" src={post.data.cover} alt={post.data.coverAlt} layout='constrained' width={320} />
+      </div>
     )}
   </ul>
 </BaseLayout>
