--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Social from "../components/Social.astro"
 
 ---
 <footer class="mb-8">
-    <div class="flex mt-2 ml-8 mb-8 gap-4">
+    <div class="flex m-8 gap-4">
         <div>Find me on
             <div class="flex gap-4 mt-4">
                 <Social platform="GitHub" username="SEELE1306" />
