fix: image optimization to eager loading

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -26,7 +26,7 @@ const pageTitle = "Blog Page";
             src={post.data.cover} 
             alt={post.data.coverAlt} 
             layout='constrained' 
-            loading="lazy" 
+            loading="eager" 
             inferSize 
           />
         </div>
