feat: Tag filtering directly in blog page

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,5 @@
 --- 
 <div class="nav">
     <a class="nav-link" href="/">Home</a>
-    <a class="nav-link" href="/blog">Blog</a>
-    <a class="nav-link" href="/tags">Tags</a>
+    <a class="nav-link" href="/pages/blog">Blog</a>
 </div>
